@@ -1,6 +1,5 @@
 - when in "ready"-state, left-click -> auto-go to initial state
   before opening left-click menu(?)
-
 - when steeping, display "stop <teaname>" on left-click, not just "stop"
 - bug(?): I haven't seen the icon being +animated+ for a long time!
   (something wrong with timer?)
@@ -19,11 +18,8 @@
   in locale-respecting way
 - some more tidying of configure-dialog
   (eg. initial position!, initial size)
-- beep() shouldn't use "special event" from "KDE system notifications",
-  but define some own event? (and use own "steeping"-sample?)
 - DCOP interface?
 - have a closer look at i18n-dos and -donts
-- use KAction for enable/disable widgets?
 - use XML-UI
 - check for memory leaks
 - make config-reading bullet-proof
@@ -31,7 +27,7 @@
 
 ---- new approach:
 
-- make it a generalized timer-application
+- make it a generalized timer-application (with better UI than KTimer)
   (think: cooking spaghetti, watch TV-show, etc.)
 
   - This needs another approach to entering timeouts, since they'll often be
