@@ -1,3 +1,8 @@
+2003-02-23  Martin Willers <willers@xm-arts.de>
+	- "beep" option now uses KNotify::event()
+	  (need own "steeping" sound now)
+	(patch provided by Daniel Teske <teske@bigfoot.com>)
+
 2003-02-22  Martin Willers <willers@xm-arts.de>
 	- don't display ticks in left-click menu
 
